# snorlax

./: .gitignore  README.md  main.py  package.json  pyproject.toml  snorlax.toml  tsconfig.app.json  vite.config.ts
.github/docs/: v1.md
scripts/: import_external.py
snorlax/: __init__.py  config.py  database.py  ingest.py
snorlax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
snorlax/database/: __init__.py  columns.py  tables.sql
snorlax/frontend/: index.html  tsconfig.app.json  vite.config.ts
snorlax/frontend/src/: app.tsx  main.tsx
snorlax/frontend/src/components/: header.tsx  paginator.tsx  view.tsx
snorlax/frontend/src/hooks/: useAsset.ts  useChannel.ts  useHeaderActions.ts  usePageTitle.ts  useStore.ts  useVideo.ts
snorlax/frontend/src/lib/: time.ts
snorlax/frontend/src/pages/: 404.tsx  about.tsx  channel.tsx  home.tsx  jobs.tsx  manage.tsx  search.tsx  settings.tsx  watch.tsx
snorlax/frontend/src/styles/: global.css
snorlax/frontend/src/types/: api.ts  header.ts  store.ts
snorlax/static/css/: channel.css  global.css
snorlax/static/js/: manage.js  pagination.js  search.js  video.js
snorlax/static/js/lib/: humanize.js
snorlax/templates/: channel.jinja2  main.jinja2  video.jinja2
snorlax/templates/errors/: 404.jinja2
snorlax/templates/macros/: header.jinja2  paginate.jinja2  renderer.jinja2
snorlax/templates/pages/: channel.jinja2  home.jinja2  manage.jinja2  search.jinja2  video.jinja2
templates/: 404.jinja2  channel.jinja2  main.jinja2  video.jinja2
