[project]
name = "snorlax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.122.0",
    "humanize>=4.14.0",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.38.0",
    "yt-dlp>=2025.11.12",
]
