[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "snorlax"
version = "4.4.1"
description = "Local-first video downloading and hosting"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "yt-dlp[curl-cffi,default]>=2026.3.17",
]

[project.urls]
Homepage = "https://github.com/iiPythonx/snorlax"
Issues = "https://github.com/iiPythonx/snorlax/issues"

[tool.uv.build-backend]
module-name = "snorlax"
module-root = ""
